Обновил стили хедера и добавил анимации

--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
       <div>
         <h2 id="aboutTitle" class="text-3xl font-bold mb-6">Über uns</h2>
         <p class="text-lg text-slate-600 dark:text-slate-300 mb-4">Wir von Lebensanker sind mehr als nur ein Pflegedienst – wir sind ein Zuhause für Menschen, die Ruhe, Fürsorge und Gemeinschaft suchen.</p>
-        <p class="text-lg text-slate-600 dark:text-slate-300 mb-6">Pflegebedürftige Menschen brauchen liebevolle und fürsorgliche Betreuung. Doch ist es für Angehörige schwierig, diese Herausforderung allein zu bewältigen. Der Pflegedienst Lebensankerunterstützt Sie bei dieser Aufgabe und begleitet Sie im Pflegealltag, auch rund um die Uhr.
+        <p class="text-lg text-slate-600 dark:text-slate-300 mb-6">Pflegebedürftige Menschen brauchen liebevolle und fürsorgliche Betreuung. Doch für Angehörige ist es oft schwierig, diese Herausforderung allein zu bewältigen.
+Der Pflegedienst Lebensanker unterstützt Sie bei dieser Aufgabe und begleitet Sie im Pflegealltag – auch rund um die Uhr.
 Kontaktieren Sie uns, wenn Sie Unterstützung bei der Pflege Ihrer Angehörigen benötigen! </p>
         <blockquote class="bg-[var(--mint-50)] dark:bg-slate-800 rounded-2xl p-6 italic text-xl text-[var(--mint)] shadow mb-6 text-center">„Pflege ist nicht nur Betreuung, sondern auch Herz.“</blockquote>
         <address class="not-italic text-slate-500 dark:text-slate-400">Raiffeisenstraße 6, 67555 Kaiserslautern</address>
@@ -163,7 +164,7 @@ Kontaktieren Sie uns, wenn Sie Unterstützung bei der Pflege Ihrer Angehörigen 
 <!-- Параллакс-карточка, как на creati.studio -->
 <div class="relative">
   <div class="aspect-[4/3] rounded-3xl overflow-hidden shadow-lg tilt-wrap js-tilt-on-scroll" data-tilt="10" data-scale="1.045">
-    <img src="./img/pflegedienst-1.jpg"
+    <img src="./img/alte-frau-und-hilfe-gehen-treppe-hoch-draussen.jpg"
          alt="Foto: Gemeinschaft im Lebensanker"
          class="w-full h-full object-cover tilt-media" />
   </div>
@@ -182,63 +183,100 @@ Kontaktieren Sie uns, wenn Sie Unterstützung bei der Pflege Ihrer Angehörigen 
   </section>
 
   <!-- Angebote -->
-  <section id="angebote" class="section" aria-labelledby="angeboteTitle" style="background:color-mix(in oklab, var(--beige) 45%, transparent);">
-    <div class="wave wave-top" aria-hidden="true">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 120" preserveAspectRatio="none" class="text-[var(--body)]" fill="currentColor"><path d="M0,0V120H1440V0C1106,77,348,-53,0,0Z"/></svg>
+  <section id="angebote" class="section" aria-labelledby="angeboteTitle">
+  <div class="max-w-7xl mx-auto px-4">
+    <div class="mb-8 md:mb-12 text-center">
+      <h2 id="angeboteTitle" class="text-3xl md:text-4xl font-bold text-[var(--ever)]">
+        Unsere Angebote
+      </h2>
+      <p class="mt-3 text-slate-600 dark:text-slate-300">
+        Passende Unterstützung – zu Hause, tagsüber oder mit besonderem Bedarf.
+      </p>
     </div>
-    <div class="fade-in max-w-7xl mx-auto px-4">
-      <h2 id="angeboteTitle" class="text-3xl font-bold text-center mb-10">Unsere Angebote</h2>
-      <div class="grid md:grid-cols-4 gap-5">
-        <article id="angebot-pflege" class="card fade-in">
-          <div class="mb-2" aria-hidden="true"><svg class="icon-pop text-[var(--mint)]" width="28" height="28" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2a7 7 0 0 1 7 7c0 5.25-7 13-7 13S5 14.25 5 9a7 7 0 0 1 7-7Zm0 9.5a2.5 2.5 0 1 0 0-5a2.5 2.5 0 0 0 0 5Z"/></svg></div>
-          <h3 class="text-xl font-semibold">Ambulanter Pflegedienst</h3>
-          <p class="mt-2 text-slate-600 dark:text-slate-300">Grund- & Behandlungspflege, Hauswirtschaft, Begleitung zu Terminen – zuverlässig zu Hause.</p>
-          <ul class="mt-2 text-sm list-disc pl-5 text-slate-600 dark:text-slate-300">
-            <li>Medikamentengabe & Wundversorgung</li>
-            <li>Alltagsbegleitung</li>
-            <li>Entlastung für Angehörige</li>
-          </ul>
-          <div class="mt-4 flex justify-center"><a href="#kontakt" class="btn-secondary inline-flex">Mehr erfahren</a></div>
-        </article>
 
-        <article id="tagespflege" class="card fade-in">
-          <div class="mb-2" aria-hidden="true"><svg class="icon-pop text-[var(--mint)]" width="28" height="28" viewBox="0 0 24 24"><path fill="currentColor" d="M3 6h18v2H3V6Zm0 5h18v2H3v-2Zm0 5h18v2H3v-2Z"/></svg></div>
-          <h3 class="text-xl font-semibold">Tagespflege</h3>
-          <p class="mt-2 text-slate-600 dark:text-slate-300">Sanfte Tagesstruktur, Aktivierung, gemeinsames Essen, Ruhezeiten. Abholung nach Absprache.</p>
-          <ul class="mt-2 text-sm list-disc pl-5 text-slate-600 dark:text-slate-300">
-            <li>Ruhige Gruppenangebote</li>
-            <li>Gemeinsame Mahlzeiten</li>
-            <li>Transport nach Absprache</li>
-          </ul>
-          <div class="mt-4 flex justify-center"><a href="#kontakt" class="btn-secondary inline-flex">Mehr erfahren</a></div>
-        </article>
+    <div class="grid gap-6 md:gap-8 md:grid-cols-2">
+      <!-- Card 1 -->
+      <article class="offer-card">
+        <div class="offer-card__head">
+          <span class="offer-icon" aria-hidden="true">🏠</span>
+          <h3 class="offer-title">Ambulanter Pflegedienst</h3>
+        </div>
+        <p class="offer-desc">
+          Zuverlässige Hilfe im Alltag: Grund- und Behandlungspflege, Medikamentengabe, Wundversorgung u.v.m.
+        </p>
+        <ul class="offer-list">
+          <li>Individuelle Pflegeplanung</li>
+          <li>24/7 Erreichbarkeit im Notfall</li>
+          <li>Koordination mit Ärzt:innen &amp; Kassen</li>
+        </ul>
+        <div class="offer-cta">
+          <a href="#kontakt" class="btn">Beratung anfragen</a>
+          <a href="#angebot-pflege" class="btn-secondary">Mehr erfahren</a>
+        </div>
+      </article>
 
-        <article id="angebot-psy" class="card fade-in">
-          <div class="mb-2" aria-hidden="true"><svg class="icon-pop text-[var(--mint)]" width="28" height="28" viewBox="0 0 24 24"><path fill="currentColor" d="M12 3a9 9 0 0 0-9 9a9 9 0 0 0 9 9h1v-4h-1a5 5 0 1 1 5-5v1h4v-1A9 9 0 0 0 12 3Z"/></svg></div>
-          <h3 class="text-xl font-semibold">Ambulante psychiatrische Pflege</h3>
-          <p class="mt-2 text-slate-600 dark:text-slate-300">Stabilisierung im Alltag, Medikamenten-Management, Krisen- & Angehörigenunterstützung.</p>
-          <ul class="mt-2 text-sm list-disc pl-5 text-slate-600 dark:text-slate-300">
-            <li>Tagesstruktur & Motivation</li>
-            <li>Krisenplan & Sicherheit</li>
-            <li>Angehörigenarbeit</li>
-          </ul>
-          <div class="mt-4 flex justify-center"><a href="#kontakt" class="btn-secondary inline-flex">Mehr erfahren</a></div>
-        </article>
+      <!-- Card 2 -->
+      <article class="offer-card">
+        <div class="offer-card__head">
+          <span class="offer-icon" aria-hidden="true">☀️</span>
+          <h3 class="offer-title">Tagespflege</h3>
+        </div>
+        <p class="offer-desc">
+          Strukturierte Tagesbetreuung mit Aktivierung, Gemeinschaft und Entlastung für Angehörige.
+        </p>
+        <ul class="offer-list">
+          <li>Abholung &amp; Rückfahrt möglich</li>
+          <li>Aktivierende Angebote &amp; Mahlzeiten</li>
+          <li>Demenz-freundliches Umfeld</li>
+        </ul>
+        <div class="offer-cta">
+          <a href="#kontakt" class="btn">Platz anfragen</a>
+          <a href="#tagespflege" class="btn-secondary">Mehr erfahren</a>
+        </div>
+      </article>
 
-        <article id="beratung" class="card fade-in">
-          <div class="mb-2" aria-hidden="true"><svg class="icon-pop text-[var(--mint)]" width="28" height="28" viewBox="0 0 24 24"><path fill="currentColor" d="M3 5h18v2H3V5Zm0 4h12v2H3V9Zm0 4h18v2H3v-2Zm0 4h12v2H3v-2Z"/></svg></div>
-          <h3 class="text-xl font-semibold">Allgemeine Beratung</h3>
-          <p class="mt-2 text-slate-600 dark:text-slate-300">Orientierung, Pflegeorganisation, Anträge, Vernetzung mit Partnern – klar & verständlich.</p>
-          <ul class="mt-2 text-sm list-disc pl-5 text-slate-600 dark:text-slate-300">
-            <li>Organisation der Pflege</li>
-            <li>Unterstützung bei Anträgen</li>
-            <li>Netzwerk vor Ort</li>
-          </ul>
-          <div class="mt-4 flex justify-center"><a href="#kontakt" class="btn-secondary inline-flex">Mehr erfahren</a></div>
-        </article>
-      </div>
+      <!-- Card 3 -->
+      <article class="offer-card">
+        <div class="offer-card__head">
+          <span class="offer-icon" aria-hidden="true">🧠</span>
+          <h3 class="offer-title">Ambulante psychiatrische Pflege</h3>
+        </div>
+        <p class="offer-desc">
+          Fachpflegerische Unterstützung zu Hause bei psychischen Erkrankungen – stabilisierend &amp; alltagsnah.
+        </p>
+        <ul class="offer-list">
+          <li>Beziehungs- &amp; Krisenarbeit</li>
+          <li>Struktur &amp; Alltagskompetenz</li>
+          <li>Enge Zusammenarbeit im Netzwerk</li>
+        </ul>
+        <div class="offer-cta">
+          <a href="#kontakt" class="btn">Unverbindlich beraten</a>
+          <a href="#angebot-psy" class="btn-secondary">Mehr erfahren</a>
+        </div>
+      </article>
+
+      <!-- Card 4 -->
+      <article class="offer-card">
+        <div class="offer-card__head">
+          <span class="offer-icon" aria-hidden="true">💬</span>
+          <h3 class="offer-title">Pflege- &amp; Angehörigenberatung</h3>
+        </div>
+        <p class="offer-desc">
+          Wir klären Ansprüche, Anträge und finden gemeinsam die beste Versorgung – transparent &amp; verständlich.
+        </p>
+        <ul class="offer-list">
+          <li>Leistungsanträge &amp; Pflegegrade</li>
+          <li>Entlastungsleistungen &amp; Finanzierung</li>
+          <li>Schulungen für Angehörige</li>
+        </ul>
+        <div class="offer-cta">
+          <a href="#kontakt" class="btn">Termin vereinbaren</a>
+          <a href="#beratung" class="btn-secondary">Mehr erfahren</a>
+        </div>
+      </article>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Team -->
   <section id="team" class="section" aria-labelledby="teamTitle" style="background:color-mix(in oklab, var(--pistage) 35%, transparent);">
@@ -447,7 +485,3 @@ Kontaktieren Sie uns, wenn Sie Unterstützung bei der Pflege Ihrer Angehörigen 
  
 </body>
 </html>
-
-
-
-
