Fix CSS path for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
   <link rel="preconnect" href="https://cdn.tailwindcss.com" crossorigin>
   <script src="https://cdn.tailwindcss.com"></script>
   
- 
-
+  <!-- Наши стили -->
+   <link rel="stylesheet" href="./styles.css" /
+  <link rel="stylesheet" href="./css/styles.css">
   
 
-  <!-- Наши стили -->
-  <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
   <!-- Header -->
@@ -183,6 +182,8 @@ Kontaktieren Sie uns, wenn Sie Unterstützung bei der Pflege Ihrer Angehörigen 
   </section>
 
   <!-- Angebote -->
+
+
   <section id="angebote" class="section" aria-labelledby="angeboteTitle">
   <div class="max-w-7xl mx-auto px-4">
     <div class="mb-8 md:mb-12 text-center">
