--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   <script src="https://cdn.tailwindcss.com"></script>
   
   <!-- Наши стили -->
-   <link rel="stylesheet" href="./styles.css" /
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./styles.css" />
+
+  
   
 
 </head>
@@ -138,6 +139,7 @@
 
 
   <!-- Über uns -->
+
   <section id="about" class="section relative" aria-labelledby="aboutTitle">
     <div class="absolute -top-10 left-0 w-full overflow-hidden leading-none rotate-180" aria-hidden="true">
       <svg class="relative block w-full h-10 text-[var(--beige)]" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1440 120" fill="currentColor"><path d="M0,0V120H1440V0C1106,77,348,-53,0,0Z"></path></svg>
@@ -147,8 +149,8 @@
         <h2 id="aboutTitle" class="text-3xl font-bold mb-6">Über uns</h2>
         <p class="text-lg text-slate-600 dark:text-slate-300 mb-4">Wir von Lebensanker sind mehr als nur ein Pflegedienst – wir sind ein Zuhause für Menschen, die Ruhe, Fürsorge und Gemeinschaft suchen.</p>
         <p class="text-lg text-slate-600 dark:text-slate-300 mb-6">Pflegebedürftige Menschen brauchen liebevolle und fürsorgliche Betreuung. Doch für Angehörige ist es oft schwierig, diese Herausforderung allein zu bewältigen.
-Der Pflegedienst Lebensanker unterstützt Sie bei dieser Aufgabe und begleitet Sie im Pflegealltag – auch rund um die Uhr.
-Kontaktieren Sie uns, wenn Sie Unterstützung bei der Pflege Ihrer Angehörigen benötigen! </p>
+            Der Pflegedienst Lebensanker unterstützt Sie bei dieser Aufgabe und begleitet Sie im Pflegealltag – auch rund um die Uhr.
+            Kontaktieren Sie uns, wenn Sie Unterstützung bei der Pflege Ihrer Angehörigen benötigen! </p>
         <blockquote class="bg-[var(--mint-50)] dark:bg-slate-800 rounded-2xl p-6 italic text-xl text-[var(--mint)] shadow mb-6 text-center">„Pflege ist nicht nur Betreuung, sondern auch Herz.“</blockquote>
         <address class="not-italic text-slate-500 dark:text-slate-400">Raiffeisenstraße 6, 67555 Kaiserslautern</address>
       </div>
@@ -184,95 +186,78 @@ Kontaktieren Sie uns, wenn Sie Unterstützung bei der Pflege Ihrer Angehörigen 
   <!-- Angebote -->
 
 
-  <section id="angebote" class="section" aria-labelledby="angeboteTitle">
-  <div class="max-w-7xl mx-auto px-4">
-    <div class="mb-8 md:mb-12 text-center">
-      <h2 id="angeboteTitle" class="text-3xl md:text-4xl font-bold text-[var(--ever)]">
-        Unsere Angebote
-      </h2>
-      <p class="mt-3 text-slate-600 dark:text-slate-300">
-        Passende Unterstützung – zu Hause, tagsüber oder mit besonderem Bedarf.
-      </p>
-    </div>
+  <section id="angebote"
+         class="section relative"
+         aria-labelledby="angeboteTitle"
+         style="background:color-mix(in oklab, var(--beige) 45%, transparent);">
 
-    <div class="grid gap-6 md:gap-8 md:grid-cols-2">
-      <!-- Card 1 -->
-      <article class="offer-card">
-        <div class="offer-card__head">
-          <span class="offer-icon" aria-hidden="true">🏠</span>
-          <h3 class="offer-title">Ambulanter Pflegedienst</h3>
+  <!-- верхняя разделительная волна -->
+  <div class="wave wave-top" aria-hidden="true">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 120"
+       preserveAspectRatio="none" class="text-[var(--body)]" fill="currentColor">
+    <path d="M0,0V120H1440V0C1106,77,348,-53,0,0Z"></path>
+  </svg>
+</div>
+
+
+  <div class="angebote-wrap">
+    <h2 id="angeboteTitle" class="text-3xl font-bold text-center mb-2">Unsere Angebote</h2>
+    <p class="text-center text-slate-500 mb-6">Ambulante Pflege · Tagespflege · Psychiatrische Pflege · Beratung</p>
+
+    <div class="angebote-grid">
+      <!-- Карточка 1 -->
+      <article class="angebot-card card">
+        <div class="angebot-content">
+          <div class="angebot-icon">
+            <svg width="28" height="28" aria-hidden="true"><use href="#i-ambulant"/></svg>
+          </div>
+          <h3 class="font-semibold">Ambulanter Pflegedienst</h3>
+          <p class="text-slate-600">Zuverlässige Hilfe zu Hause – Grund- &amp; Behandlungspflege, Medikamentengabe, Wundversorgung.</p>
         </div>
-        <p class="offer-desc">
-          Zuverlässige Hilfe im Alltag: Grund- und Behandlungspflege, Medikamentengabe, Wundversorgung u.v.m.
-        </p>
-        <ul class="offer-list">
-          <li>Individuelle Pflegeplanung</li>
-          <li>24/7 Erreichbarkeit im Notfall</li>
-          <li>Koordination mit Ärzt:innen &amp; Kassen</li>
-        </ul>
-        <div class="offer-cta">
-          <a href="#kontakt" class="btn">Beratung anfragen</a>
-          <a href="#angebot-pflege" class="btn-secondary">Mehr erfahren</a>
+        <div class="angebot-cta">
+          <a href="#kontakt" class="btn-secondary">Beratung</a>
         </div>
       </article>
 
-      <!-- Card 2 -->
-      <article class="offer-card">
-        <div class="offer-card__head">
-          <span class="offer-icon" aria-hidden="true">☀️</span>
-          <h3 class="offer-title">Tagespflege</h3>
+      <!-- Карточка 2 -->
+      <article class="angebot-card card">
+        <div class="angebot-content">
+          <div class="angebot-icon">
+            <svg width="28" height="28" aria-hidden="true"><use href="#i-tagespflege"/></svg>
+          </div>
+          <h3 class="font-semibold">Tagespflege</h3>
+          <p class="text-slate-600">Strukturierte Tagesbetreuung mit Aktivierung, Gemeinschaft und Entlastung für Angehörige.</p>
         </div>
-        <p class="offer-desc">
-          Strukturierte Tagesbetreuung mit Aktivierung, Gemeinschaft und Entlastung für Angehörige.
-        </p>
-        <ul class="offer-list">
-          <li>Abholung &amp; Rückfahrt möglich</li>
-          <li>Aktivierende Angebote &amp; Mahlzeiten</li>
-          <li>Demenz-freundliches Umfeld</li>
-        </ul>
-        <div class="offer-cta">
+        <div class="angebot-cta">
           <a href="#kontakt" class="btn">Platz anfragen</a>
-          <a href="#tagespflege" class="btn-secondary">Mehr erfahren</a>
         </div>
       </article>
 
-      <!-- Card 3 -->
-      <article class="offer-card">
-        <div class="offer-card__head">
-          <span class="offer-icon" aria-hidden="true">🧠</span>
-          <h3 class="offer-title">Ambulante psychiatrische Pflege</h3>
+      <!-- Карточка 3 -->
+      <article class="angebot-card card">
+        <div class="angebot-content">
+          <div class="angebot-icon">
+            <svg width="28" height="28" aria-hidden="true"><use href="#i-psy"/></svg>
+          </div>
+          <h3 class="font-semibold">Ambulante psychiatrische Pflege</h3>
+          <p class="text-slate-600">Fachpflegerische Unterstützung zu Hause bei psychischen Erkrankungen – stabilisierend & alltagsnah.</p>
         </div>
-        <p class="offer-desc">
-          Fachpflegerische Unterstützung zu Hause bei psychischen Erkrankungen – stabilisierend &amp; alltagsnah.
-        </p>
-        <ul class="offer-list">
-          <li>Beziehungs- &amp; Krisenarbeit</li>
-          <li>Struktur &amp; Alltagskompetenz</li>
-          <li>Enge Zusammenarbeit im Netzwerk</li>
-        </ul>
-        <div class="offer-cta">
-          <a href="#kontakt" class="btn">Unverbindlich beraten</a>
-          <a href="#angebot-psy" class="btn-secondary">Mehr erfahren</a>
+        <div class="angebot-cta">
+          <a href="#kontakt" class="btn-secondary">Beratung</a>
         </div>
       </article>
 
-      <!-- Card 4 -->
-      <article class="offer-card">
-        <div class="offer-card__head">
-          <span class="offer-icon" aria-hidden="true">💬</span>
-          <h3 class="offer-title">Pflege- &amp; Angehörigenberatung</h3>
+      <!-- Карточка 4 -->
+      <article class="angebot-card card">
+        <div class="angebot-content">
+          <div class="angebot-icon">
+            <svg width="28" height="28" aria-hidden="true"><use href="#i-beratung"/></svg>
+          </div>
+          <h3 class="font-semibold">Pflege- &amp; Angehörigenberatung</h3>
+          <p class="text-slate-600">Transparente Beratung zu Ansprüchen, Pflegegraden und Entlastungsleistungen – für Angehörige.</p>
         </div>
-        <p class="offer-desc">
-          Wir klären Ansprüche, Anträge und finden gemeinsam die beste Versorgung – transparent &amp; verständlich.
-        </p>
-        <ul class="offer-list">
-          <li>Leistungsanträge &amp; Pflegegrade</li>
-          <li>Entlastungsleistungen &amp; Finanzierung</li>
-          <li>Schulungen für Angehörige</li>
-        </ul>
-        <div class="offer-cta">
+        <div class="angebot-cta">
           <a href="#kontakt" class="btn">Termin vereinbaren</a>
-          <a href="#beratung" class="btn-secondary">Mehr erfahren</a>
         </div>
       </article>
     </div>
@@ -480,7 +465,51 @@ Kontaktieren Sie uns, wenn Sie Unterstützung bei der Pflege Ihrer Angehörigen 
     </div>
     <p class="text-center mt-8 text-white/70">© 2025 Lebensanker Pflegestützpunkt GmbH</p>
   </footer>
+<!-- SVG SPRITE (вставить ОДИН раз на странице) -->
+<svg xmlns="http://www.w3.org/2000/svg" style="display:none">
+  <!-- AMBULANTE PFLEGE — дом + медицинский крест -->
+  <symbol id="i-ambulant" viewBox="0 0 64 64" fill="none">
+    <g stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M10 30L32 14l22 16" />
+      <path d="M16 28v20a4 4 0 0 0 4 4h24a4 4 0 0 0 4-4V28" />
+      <rect x="24" y="34" width="16" height="12" rx="2" />
+      <path d="M32 30v4m-4 0h8" />
+    </g>
+  </symbol>
 
+  <!-- TAGESPFLEGE — солнце над карточкой-днём -->
+  <symbol id="i-tagespflege" viewBox="0 0 64 64" fill="none">
+    <g stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+      <rect x="10" y="28" width="44" height="22" rx="4" />
+      <path d="M18 36h12m-12 6h20" />
+      <!-- солнце -->
+      <circle cx="40" cy="18" r="6" fill="#B9926A" opacity=".25"/>
+      <path d="M40 8v3M40 25v3M31 18h3M46 18h3M33 11l2 2M45 25l2 2M33 25l2-2M45 13l2-2"/>
+    </g>
+  </symbol>
+
+  <!-- PSYCHIATRISCHE PFLEGE — мозг на поддерживающей ладони -->
+  <symbol id="i-psy" viewBox="0 0 64 64" fill="none">
+    <g stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+      <!-- ладонь -->
+      <path d="M12 40c4 0 8 .6 11.5 2 4 1.6 7.5 2.4 11 .6 2.6-1.3 5.1-1.8 7.5-.8a7 7 0 0 1 4 4.4c.5 1.8-.7 3.8-2.6 4.2-7.7 1.6-21.1 4.4-30.4-3.1" />
+      <!-- мозг -->
+      <path d="M26 20a5 5 0 0 1 6-4 6 6 0 0 1 10 4 5 5 0 0 1-2 9h-1" />
+      <path d="M26 20a5 5 0 0 0-3 9h2" />
+      <circle cx="45" cy="35" r="2.2" fill="#B9926A"/>
+    </g>
+  </symbol>
+
+  <!-- BERATUNG — чат-бабл + точки -->
+  <symbol id="i-beratung" viewBox="0 0 64 64" fill="none">
+    <g stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M10 18h32a10 10 0 0 1 10 10v6a10 10 0 0 1-10 10H26l-10 8v-8h-6a10 10 0 0 1-10-10v-6a10 10 0 0 1 10-10Z" />
+      <circle cx="24" cy="31" r="2.4" fill="#B9926A"/>
+      <circle cx="34" cy="31" r="2.4" fill="#B9926A"/>
+      <circle cx="44" cy="31" r="2.4" fill="#B9926A"/>
+    </g>
+  </symbol>
+</svg>
   <!-- Скрипты проекта -->
   <script src="./app.js" defer></script>
  
