Übergang / Trennwelle zwischen Über uns und Angebote

--- a/index.html
+++ b/index.html
@@ -183,6 +183,20 @@
     </div>
   </section>
 
+  <!-- Übergang / Trennwelle zwischen Über uns und Angebote -->
+
+<section class="section-wave relative" aria-hidden="true">
+  <div class="wave wave-bottom pointer-events-none">
+    <svg xmlns="http://www.w3.org/2000/svg"
+         viewBox="0 0 1440 120"
+         preserveAspectRatio="none"
+         class="text-white"
+         fill="currentColor">
+      <path d="M0,0V120H1440V0C1106,77,348,-53,0,0Z"/>
+    </svg>
+  </div>
+</section>
+
   <!-- Angebote -->
 
 
