unser Team extra

--- a/index.html
+++ b/index.html
@@ -287,12 +287,18 @@
 
 
 <section id="team" class="section relative" aria-labelledby="teamTitle">
-  <!-- Верхняя разделительная волна (опционально) -->
+  <!-- верхняя белая волна -->
   <div class="wave wave-top" aria-hidden="true">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 120" preserveAspectRatio="none" class="text-[var(--body)]" fill="currentColor">
+    <svg xmlns="http://www.w3.org/2000/svg"
+         viewBox="0 0 1440 120"
+         preserveAspectRatio="none"
+         class="text-white/95"
+         fill="currentColor">
       <path d="M0,0V120H1440V0C1106,77,348,-53,0,0Z"></path>
     </svg>
   </div>
+
+  
   
 
   <div class="max-w-7xl mx-auto px-4">
@@ -410,8 +416,12 @@
   </div>
 
   <!-- Нижняя волна (опционально) -->
-  <div class="wave wave-bottom" aria-hidden="true">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 120" preserveAspectRatio="none" class="text-[var(--body)]" fill="currentColor">
+   <div class="wave wave-bottom absolute bottom-0 left-0 w-full overflow-hidden leading-none rotate-180" aria-hidden="true">
+    <svg xmlns="http://www.w3.org/2000/svg"
+         viewBox="0 0 1440 120"
+         preserveAspectRatio="none"
+         class="text-white"
+         fill="currentColor">
       <path d="M0,0V120H1440V0C1106,77,348,-53,0,0Z"></path>
     </svg>
   </div>
