new4 section unser Team

--- a/index.html
+++ b/index.html
@@ -283,9 +283,6 @@
 
   
   <!-- Unser Team Section -->
-
-
-
 <section id="team" class="section relative py-16 md:py-20 bg-[color-mix(in_oklab,var(--beige)_30%,transparent)]" aria-labelledby="teamTitle">
 
   <!-- Верхняя белая волна -->
@@ -298,85 +295,121 @@
   <div class="max-w-7xl mx-auto px-4">
     <header class="text-center mb-10 fade-in">
       <h2 id="teamTitle" class="text-4xl font-bold text-[var(--calm)] tracking-tight">Unser Team</h2>
-      <p class="text-slate-600 dark:text-slate-300 mt-3 text-lg">Pflege, Pädagogik &amp; Therapie – gemeinsam für Sie da.</p>
+      <p class="text-slate-600 dark:text-slate-300 mt-3 text-lg">
+        Pflege, Pädagogik &amp; Therapie – gemeinsam für Sie da.
+      </p>
     </header>
 
     <!-- Карусель -->
     <div class="relative select-none" role="region" aria-roledescription="carousel" aria-label="Unser Team">
       <!-- Viewport -->
       <div id="teamViewport" class="overflow-hidden rounded-3xl shadow-inner" aria-live="polite">
-        <ul id="teamTrack" class="flex gap-7 will-change-transform transition-transform duration-700 ease-[cubic-bezier(.22,.61,.36,1)]">
-          
-          <!-- СЛАЙД -->
-          <li class="shrink-0 basis-[82%] sm:basis-[48%] md:basis-[31%] lg:basis-[23.5%]">
-            <figure class="relative overflow-hidden rounded-3xl shadow-lg group">
-              <img src="./img/team-1.jpg" alt="Mitarbeiterin Kristina" class="w-full h-[340px] object-cover transform group-hover:scale-[1.05] transition duration-700">
-              <figcaption class="absolute inset-x-0 bottom-0 bg-gradient-to-t from-black/65 via-black/25 to-transparent p-5 text-white">
-                <strong class="block text-base font-semibold">Kristina K.</strong>
+        <ul id="teamTrack"
+            class="flex gap-7 will-change-transform"
+            style="transform: translateX(0); transition: transform .6s cubic-bezier(.22,.61,.36,1);">
+
+          <!-- 1 -->
+          <li class="shrink-0 basis-[82%] sm:basis-[48%] md:basis-[31.5%] lg:basis-[23.8%]" data-index="0">
+            <figure class="team-card">
+              <img src="./img/team-1.jpg" alt="Kristina K., Pflegeleiterin" class="team-photo w-full h-[320px] object-cover">
+              <figcaption class="team-caption absolute inset-x-0 bottom-0 p-4 text-white">
+                <strong class="block text-base">Kristina K.</strong>
                 <span class="text-white/85 text-sm">Pflegeleiterin</span>
               </figcaption>
             </figure>
           </li>
 
-          <li class="shrink-0 basis-[82%] sm:basis-[48%] md:basis-[31%] lg:basis-[23.5%]">
-            <figure class="relative overflow-hidden rounded-3xl shadow-lg group">
-              <img src="./img/team-2.jpg" alt="Mitarbeiter Jonas" class="w-full h-[340px] object-cover transform group-hover:scale-[1.05] transition duration-700">
-              <figcaption class="absolute inset-x-0 bottom-0 bg-gradient-to-t from-black/65 via-black/25 to-transparent p-5 text-white">
-                <strong class="block text-base font-semibold">Jonas R.</strong>
-                <span class="text-white/85 text-sm">Gesundheits- & Krankenpfleger</span>
+          <!-- 2 -->
+          <li class="shrink-0 basis-[82%] sm:basis-[48%] md:basis-[31.5%] lg:basis-[23.8%]" data-index="1">
+            <figure class="team-card">
+              <img src="./img/team-2.jpg" alt="Jonas R., Gesundheits- und Krankenpfleger" class="team-photo w-full h-[320px] object-cover">
+              <figcaption class="team-caption absolute inset-x-0 bottom-0 p-4 text-white">
+                <strong class="block text-base">Jonas R.</strong>
+                <span class="text-white/85 text-sm">Gesundheits- und Krankenpfleger</span>
               </figcaption>
             </figure>
           </li>
 
-          <li class="shrink-0 basis-[82%] sm:basis-[48%] md:basis-[31%] lg:basis-[23.5%]">
-            <figure class="relative overflow-hidden rounded-3xl shadow-lg group">
-              <img src="./img/team-3.jpg" alt="Mitarbeiterin Leyla" class="w-full h-[340px] object-cover transform group-hover:scale-[1.05] transition duration-700">
-              <figcaption class="absolute inset-x-0 bottom-0 bg-gradient-to-t from-black/65 via-black/25 to-transparent p-5 text-white">
-                <strong class="block text-base font-semibold">Leyla K.</strong>
+          <!-- 3 -->
+          <li class="shrink-0 basis-[82%] sm:basis-[48%] md:basis-[31.5%] lg:basis-[23.8%]" data-index="2">
+            <figure class="team-card">
+              <img src="./img/team-3.jpg" alt="Leyla K., APP – Ambulante psychiatrische Pflege" class="team-photo w-full h-[320px] object-cover">
+              <figcaption class="team-caption absolute inset-x-0 bottom-0 p-4 text-white">
+                <strong class="block text-base">Leyla K.</strong>
                 <span class="text-white/85 text-sm">APP – Ambulante psychiatrische Pflege</span>
               </figcaption>
             </figure>
           </li>
 
-          <li class="shrink-0 basis-[82%] sm:basis-[48%] md:basis-[31%] lg:basis-[23.5%]">
-            <figure class="relative overflow-hidden rounded-3xl shadow-lg group">
-              <img src="./img/team-4.jpg" alt="Mitarbeiterin Sofia" class="w-full h-[340px] object-cover transform group-hover:scale-[1.05] transition duration-700">
-              <figcaption class="absolute inset-x-0 bottom-0 bg-gradient-to-t from-black/65 via-black/25 to-transparent p-5 text-white">
-                <strong class="block text-base font-semibold">Sofia P.</strong>
+          <!-- 4 -->
+          <li class="shrink-0 basis-[82%] sm:basis-[48%] md:basis-[31.5%] lg:basis-[23.8%]" data-index="3">
+            <figure class="team-card">
+              <img src="./img/team-4.jpg" alt="Sofia P., Tagespflege & Aktivierung" class="team-photo w-full h-[320px] object-cover">
+              <figcaption class="team-caption absolute inset-x-0 bottom-0 p-4 text-white">
+                <strong class="block text-base">Sofia P.</strong>
                 <span class="text-white/85 text-sm">Tagespflege &amp; Aktivierung</span>
               </figcaption>
             </figure>
           </li>
 
-          <li class="shrink-0 basis-[82%] sm:basis-[48%] md:basis-[31%] lg:basis-[23.5%]">
-            <figure class="relative overflow-hidden rounded-3xl shadow-lg group">
-              <img src="./img/team-5.jpg" alt="Mitarbeiter Max" class="w-full h-[340px] object-cover transform group-hover:scale-[1.05] transition duration-700">
-              <figcaption class="absolute inset-x-0 bottom-0 bg-gradient-to-t from-black/65 via-black/25 to-transparent p-5 text-white">
-                <strong class="block text-base font-semibold">Max T.</strong>
+          <!-- 5 -->
+          <li class="shrink-0 basis-[82%] sm:basis-[48%] md:basis-[31.5%] lg:basis-[23.8%]" data-index="4">
+            <figure class="team-card">
+              <img src="./img/team-5.jpg" alt="Max T., Pflegehelfer" class="team-photo w-full h-[320px] object-cover">
+              <figcaption class="team-caption absolute inset-x-0 bottom-0 p-4 text-white">
+                <strong class="block text-base">Max T.</strong>
                 <span class="text-white/85 text-sm">Pflegehelfer</span>
               </figcaption>
             </figure>
           </li>
 
-          <li class="shrink-0 basis-[82%] sm:basis-[48%] md:basis-[31%] lg:basis-[23.5%]">
-            <figure class="relative overflow-hidden rounded-3xl shadow-lg group">
-              <img src="./img/team-6.jpg" alt="Mitarbeiterin Elena" class="w-full h-[340px] object-cover transform group-hover:scale-[1.05] transition duration-700">
-              <figcaption class="absolute inset-x-0 bottom-0 bg-gradient-to-t from-black/65 via-black/25 to-transparent p-5 text-white">
-                <strong class="block text-base font-semibold">Elena W.</strong>
+          <!-- 6 -->
+          <li class="shrink-0 basis-[82%] sm:basis-[48%] md:basis-[31.5%] lg:basis-[23.8%]" data-index="5">
+            <figure class="team-card">
+              <img src="./img/team-6.jpg" alt="Elena W., Beratung & Koordination" class="team-photo w-full h-[320px] object-cover">
+              <figcaption class="team-caption absolute inset-x-0 bottom-0 p-4 text-white">
+                <strong class="block text-base">Elena W.</strong>
                 <span class="text-white/85 text-sm">Beratung &amp; Koordination</span>
               </figcaption>
             </figure>
           </li>
+
+          <!-- 7 -->
+          <li class="shrink-0 basis-[82%] sm:basis-[48%] md:basis-[31.5%] lg:basis-[23.8%]" data-index="6">
+            <figure class="team-card">
+              <img src="./img/team-7.jpg" alt="Daniela S., Pflegeassistenz" class="team-photo w-full h-[320px] object-cover">
+              <figcaption class="team-caption absolute inset-x-0 bottom-0 p-4 text-white">
+                <strong class="block text-base">Daniela S.</strong>
+                <span class="text-white/85 text-sm">Pflegeassistenz</span>
+              </figcaption>
+            </figure>
+          </li>
+
+          <!-- 8 -->
+          <li class="shrink-0 basis-[82%] sm:basis-[48%] md:basis-[31.5%] lg:basis-[23.8%]" data-index="7">
+            <figure class="team-card">
+              <img src="./img/team-8.jpg" alt="Tobias H., Verwaltung & Organisation" class="team-photo w-full h-[320px] object-cover">
+              <figcaption class="team-caption absolute inset-x-0 bottom-0 p-4 text-white">
+                <strong class="block text-base">Tobias H.</strong>
+                <span class="text-white/85 text-sm">Verwaltung &amp; Organisation</span>
+              </figcaption>
+            </figure>
+          </li>
+
         </ul>
       </div>
 
       <!-- Стрелки -->
       <div class="pointer-events-none absolute inset-0 flex items-center justify-between">
         <button id="teamPrev" class="pointer-events-auto ml-[-8px] md:ml-4 grid place-items-center w-10 h-10 rounded-full bg-white/90 dark:bg-slate-800/90 shadow hover:scale-110 transition border border-black/10" aria-label="Vorheriges Bild">
-          <svg width="20" height="20" viewBox="0 0 24 24"><path fill="currentColor" d="M15.41 7.41L14 6l-6 6l6 6l1.41-1.41L10.83 12z"/></svg>
+          <svg width="20" height="20" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M15.41 7.41L14 6l-6 6l6 6l1.41-1.41L10.83 12z"/>
+          </svg>
         </button>
         <button id="teamNext" class="pointer-events-auto mr-[-8px] md:mr-4 grid place-items-center w-10 h-10 rounded-full bg-white/90 dark:bg-slate-800/90 shadow hover:scale-110 transition border border-black/10" aria-label="Nächstes Bild">
-          <svg width="20" height="20" viewBox="0 0 24 24"><path fill="currentColor" d="M8.59 16.59L10 18l6-6l-6-6l-1.41 1.41L13.17 12z"/></svg>
+          <svg width="20" height="20" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M8.59 16.59L10 18l6-6l-6-6l-1.41 1.41L13.17 12z"/>
+          </svg>
         </button>
       </div>
 
@@ -387,14 +420,13 @@
     </div>
   </div>
 
-  <!-- Нижняя белая волна (перевёрнутая) -->
+  <!-- Нижняя волна -->
   <div class="wave wave-bottom rotate-180 mt-10" aria-hidden="true">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 120" preserveAspectRatio="none" class="text-white" fill="currentColor">
       <path d="M0,0V120H1440V0C1106,77,348,-53,0,0Z"></path>
     </svg>
   </div>
 </section>
-
 
 
   <!-- Kooperationspartner -->
