--- a/index.html
+++ b/index.html
@@ -413,11 +413,20 @@
         </button>
       </div>
 
-      <!-- Точки -->
+                                  <!-- Точки -->
       <div class="mt-6 flex items-center justify-center gap-2" role="tablist" aria-label="Slides">
         <div id="teamDots" class="flex gap-2"></div>
       </div>
     </div>
+  </div>
+                                <!-- Кнопка  -->
+    <div class="mt-8 text-center">
+    <a href="team.html" class="btn-secondary inline-flex items-center gap-2">
+      Mehr über unser Team
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" viewBox="0 0 24 24">
+        <path fill="currentColor" d="M8.59 16.59L10 18l6-6l-6-6l-1.41 1.41L13.17 12z"/>
+      </svg>
+    </a>
   </div>
 
   <!-- Нижняя волна -->
